add: SessionFinalFindDto 추가
- 투표 최종 결과 확인 dto객체 추가